CON-1700: Fixed scrollbar in notifications for MAC

--- a/extensions/wikia/WallNotifications/styles/WallNotifications.globalNavigation.scss
+++ b/extensions/wikia/WallNotifications/styles/WallNotifications.globalNavigation.scss
@@ -67,6 +67,10 @@ $black-half-transparent: rgba(0,0,0,.6);
 
 		overflow: auto;
 
+		&::-webkit-scrollbar {
+			width: 18px;
+		}
+
 		&.scrollable {
 			background:
 				/* Shadow covers */
